--- a/pages/ice-nine.html
+++ b/pages/ice-nine.html
@@ -8,16 +8,22 @@
 
 <img src="https://c2.staticflickr.com/6/5574/29847493484_9146a017aa_c.jpg" alt="" />
 
-<p>In Kurt Vonnegut’s novel <em>Cat’s Cradle</em>, Ice IX (Ice Nine) is a substance that was developed by the Manhattan Project, which is also notoriously known for developing the first atom bomb in complete secrecy during World War II. When the bomb was finally used on Hiroshima and Nagasaki, the world realized (among which where also the scientist who helped to create the bomb) the destructive potential of the atom bomb.</p>
+<p>In Kurt Vonnegut’s novel <em>Cat’s Cradle</em>, Ice IX (Ice Nine) is a substance that was developed by the Manhattan Project, which is also notoriously known for developing the first atom bomb in complete secrecy during World War II. When the bomb was finally used on Hiroshima and Nagasaki, the world realized the destructive potential of the atom bomb &#8211; among these people, was J. Robert Oppenheimer, know as &#8220;the father of the atomic bomb&#8221;. He, like no one else, witnessed what it is like to develop a mechanism, whose power dwarfs everything that was previously created by mankind.</p>
 
-<p>Similar to the atom bomb, Ice IX was developed so that the Marines would no longer need to deal with mud, since Ice IX was a polymorph of water, which increased the freezing temperature of water from 0 to 46 Celsius. This Ice Nine was abandoned when it becomes clear that any quantity of it would have the power to destroy all life on earth. A global catastrophe involving freezing the world&#8217;s oceans with ice-nine is used as a plot device in Vonnegut&#8217;s novel.</p>
+<blockquote>
+Now I am become Death, the destroyer of worlds. </br>
+- (J. Robert Oppenheimer)
+</blockquote>
+
+<p>Similar to the atom bomb, Ice IX was developed so that the Marines would no longer need to deal with mud, since Ice IX is supposedly polymorph of water, that increases the freezing temperature of water from 0 to 46 Celsius. This Ice Nine was abandoned when it becomame clear that any quantity of it would have the power to destroy all life on earth. A global catastrophe involving freezing the world&#8217;s oceans with ice-nine is used as a plot device in Vonnegut&#8217;s novel.</p>
 
 <h2>Ice Nine Unleashed</h2>
 
-<p>This is the part where Ice Nine becomes unleashed. This is an excerpt from Vonnegut’s novel:</p>
+<p>This is the part where Ice Nine is unleashed. It was contained in a bottle that was accidentally opened and what followed was that all the water on Earth started to crystallize at a higher temperature. This is an excerpt from Vonnegut’s novel:</p>
 
 <blockquote>
-<p>There was a sound like that of the gentle closing of a portal as big as the sky, the great door of heaven being closed softly. It was a grand AH-WHOOM. I opened my eyes - and all the sea was ice-nine. The moist green earth was a blue-white pearl. The sky darkened. &#8230; The sun became a sickly yellow ball, tiny and cruel. The sky was filled with worms. The worms were tornadoes. (Cat’s Cradle, Chapter 116)</p>
+There was a sound like that of the gentle closing of a portal as big as the sky, the great door of heaven being closed softly. It was a grand AH-WHOOM. I opened my eyes - and all the sea was ice-nine. The moist green earth was a blue-white pearl. The sky darkened. &#8230; The sun became a sickly yellow ball, tiny and cruel. The sky was filled with worms. The worms were tornadoes. </br>
+- (Cat’s Cradle, Chapter 116)
 </blockquote>
 
 <p><a href="http://www.mbrav.com/Lab-FA16/13/index.html">Web Browser Interaction</a></p>
