--- a/index.html
+++ b/index.html
@@ -84,18 +84,13 @@
             Artificial Intellect Box (2015)
         </div>
         <div class="content">
-            <p><img src="src/img/head.jpg" id="portrait" alt="" /> Hi, I’m Michael 👋🏼</p>
+            <p><img src="src/img/head.jpg" id="portrait" alt="" /> Hi, this is Michael 👋🏼</p>
 
-            <p>I’m an unreserved tinkerer, an agitated theorizer, and an aspiring generalist. I am currently a BFA Design & Technology student studying at Parsons School of Design. I focus in exploring the periphery where design and technology meet. The terms that define my area of focus are <em>creative technology</em>, <em>new media art</em>, <em>interaction design</em> and <em>interdisciplinary design</em>. </p>
+            <p>He identifies himself as an unreserved tinkerer, an agitated theorizer, and an aspiring generalist. He is a current student at Parsons School of Design studying BFA Design &amp; Technology in conjunction with a secondary major in Philosophy. His investigations explore the peripheries where design and technology meet — a place where human artifice is succumbing in the ideals of technocratic quantization and determination. The terms that define Michael’s area of focus are <em>creative technology</em>, <em>new media art</em>, <em>interaction design</em> and <em>interdisciplinary design</em>. </p>
 
-            <p>My experiences range from creative/experimental web projects (including this site), to new media art installations built using the Arduino and Raspberry Pi platforms. My other skills include creative coding using JavaScript, openFrameworks and Processing libraries, sound effect &amp; music production, 3d animation, photography and video editing.</p>
+            <p>Michael’s experiences range from creative/experimental web projects (including this site), to new media art installations built using the Arduino and Raspberry Pi platforms. His other skills include creative coding using JavaScript, openFrameworks and Processing libraries, sound effect &amp; music production, 3d animation, photography and video editing.</p>
 
-            <p>In parallel with studying Design &amp; Technology at Parsons, I am also pursuing a secondary major in Philosophy and Media at Eugene Lang College. My interest in these studies is to examine technology as an existential extension of the modern human being. I seek to investigate the human condition at a time of morphing environments, evolving technologies, and the incubation of eccentric new mediums. It is a path that I am striving to explore and combine with my primary major.</p>
-
-            <h3>Updates and Work in Progress</h3>
-
-            <ul>
-            <li><a href="/code/shaders/01/index.html">Eccentric Shaders</a> — A collection of WebGL shaders that reflect on the minute constituents of our world. A web gallery medium.</li>
+            <p>In parallel with studying Design &amp; Technology at Parsons, Michael is also pursuing a secondary major in Philosophy at Eugene Lang College. His interest in these studies is to examine technology as an existential extension of the modern human being. He seeks to investigate the human condition at a time of morphing environments, evolving technologies, and the incubation of eccentric new mediums. It is a path that he is striving to explore and combine with my primary major.</p>
 
         </div>
     </main>
@@ -128,81 +123,76 @@
     <!-- RESUME PAGE  -->
     <main id="resume">
         <div class="content">
-          <h1>Resumé</h1>
+            <h1>Resumé</h1>
 
-          <p><em><strong>Creative Technology, Physical Computing, Interdisciplinary Design, and Installation Art</strong></em></p>
+            <p><em><strong>Creative Technology, Physical Computing, Interdisciplinary Design, and Installation Art</strong></em></p>
 
-          <h2>Education</h2>
+            <h2>Education</h2>
 
-          <p><a href="http://www.newschool.edu/parsons/">Parsons School of Design</a> New York, NY<br/>
-          BFA in <strong>Design and Technology</strong><br/>
-          Class of May 2018</p>
+            <p><a href="http://www.newschool.edu/parsons/">Parsons School of Design</a> New York, NY<br/> BFA in <strong>Design and Technology</strong><br/> Class of May 2018</p>
 
-          <p><a href="http://www.newschool.edu/lang/">Eugene Lang</a> New York, NY<br/>
-          BFA in <strong>Philosophy</strong><br/>
-          Class of May 2019</p>
+            <p><a href="http://www.newschool.edu/lang/">Eugene Lang</a> New York, NY<br/> BFA in <strong>Philosophy</strong><br/> Class of May 2019</p>
 
-          <p><a href="http://www.oxfordacademy.net/">Oxford Academy</a> Westbrook, CT<br/>
-          High School, 2012 - 2014</p>
+            <p><a href="http://www.oxfordacademy.net/">Oxford Academy</a> Westbrook, CT<br/> High School, 2012 - 2014</p>
 
-          <h2>Experience</h2>
+            <h2>Experience</h2>
 
-          <p><em>Communications Intern</em> at <a href="http://eyebeam.org/">Eyebeam</a><br/>
-          <b>October 2016 - Present</b>. Brooklyn, NY. </p>
+            <p><em>Communications Intern</em> at <a href="http://eyebeam.org/">Eyebeam</a><br/>
+            <b>October 2016 - Present</b>. Brooklyn, NY. </p>
 
-          <p><em>Peer Mentor</em> at <a href="http://www.newschool.edu/parsons/">Parsons School of Design</a><br/>
-          <b>March 2016 - Present</b>. New York, NY. </p>
+            <p><em>Peer Mentor</em> at <a href="http://www.newschool.edu/parsons/">Parsons School of Design</a><br/>
+            <b>March 2016 - Present</b>. New York, NY. </p>
 
-          <h2>Exhibitions &amp; Public Works</h2>
+            <h2>Exhibitions &amp; Public Works</h2>
 
-          <p><a href="https://www.facebook.com/events/860600520716726">Tangram</a><br/>
-          <b>May 2016</b>. New York, NY. </p>
+            <p><a href="https://www.facebook.com/events/860600520716726">Tangram</a><br/>
+            <b>May 2016</b>. New York, NY. </p>
 
-          <p> <a href="https://www.crunchbase.com/organization/rentity#/entity">Rentity</a> concept design at <a href="https://events.newschool.edu/event/design_and_hack_opening_ceremonies_hackathon">Design and Hack</a><br/>
-          <b>November 2014</b>. New York, NY. </p>
+            <p> <a href="https://www.crunchbase.com/organization/rentity#/entity">Rentity</a> concept design at <a href="https://events.newschool.edu/event/design_and_hack_opening_ceremonies_hackathon">Design and Hack</a><br/>
+            <b>November 2014</b>. New York, NY. </p>
 
-          <h2>Skills</h2>
+            <h2>Skills</h2>
 
-          <ul>
-          <li>Creative Coding (Processing, Open Frameworks, GLSL, etc.)</li>
-          <li>Arduino, Raspberry Pi and Internet of Things</li>
-          <li>Web Technologies (CSS3 &amp; HTML5, JavaScript, three.js, node.js, socket.io)</li>
-          <li>Music and Sound Production (Logic Pro X)</li>
-          <li>3D Modelling and Animation (Blender, Rhino)</li>
-          <li>Analog and Digital Photography ( Lightroom, Adobe Photoshop)</li>
-          <li>Video Editing (Adobe Premier Pro)</li>
-          <li>Operating an espresso machine</li>
-          </ul>
+            <ul>
+                <li>Creative Coding (Processing, Open Frameworks, GLSL, etc.)</li>
+                <li>Arduino, Raspberry Pi and Internet of Things</li>
+                <li>Web Technologies (CSS3 &amp; HTML5, JavaScript, three.js, node.js, socket.io)</li>
+                <li>Music and Sound Production (Logic Pro X)</li>
+                <li>3D Modelling and Animation (Blender, Rhino)</li>
+                <li>Analog and Digital Photography ( Lightroom, Adobe Photoshop)</li>
+                <li>Video Editing (Adobe Premier Pro)</li>
+                <li>Operating an espresso machine</li>
+            </ul>
 
-          <h2>Interests and Influences</h2>
+            <h2>Interests and Influences</h2>
 
-          <ul>
-          <li>Design based on Empirical, Ethical, Aesthetic, Utilitarian, and Interdisciplinary modes of thinking</li>
-          <li>Modular/Analog Sound Synthesis</li>
-          <li>Photography</li>
-          <li>Typography</li>
-          <li>Yoga</li>
-          </ul>
+            <ul>
+                <li>Design based on Empirical, Ethical, Aesthetic, Utilitarian, and Interdisciplinary modes of thinking</li>
+                <li>Modular/Analog Sound Synthesis</li>
+                <li>Photography</li>
+                <li>Typography</li>
+                <li>Yoga</li>
+            </ul>
 
-          <h2>Languages</h2>
+            <h2>Languages</h2>
 
-          <h3>Human Languages</h3>
+            <h3>Human Languages</h3>
 
-          <ul>
-          <li>English (fluent)</li>
-          <li>Russian (fluent)</li>
-          <li>Italian (advanced/fluent)</li>
-          </ul>
+            <ul>
+                <li>English (fluent)</li>
+                <li>Russian (fluent)</li>
+                <li>Italian (advanced/fluent)</li>
+            </ul>
 
-          <h3>Computer Languages</h3>
+            <h3>Computer Languages</h3>
 
-          <ul>
-          <li>JavaScript, HTML5, and CSS3</li>
-          <li>C++ (openFrameworks, Arduino)</li>
-          <li>Python</li>
-          <li>GLSL</li>
-          <li>Turbo Pascal (1st)</li>
-          </ul>
+            <ul>
+                <li>JavaScript, HTML5, and CSS3</li>
+                <li>C++ (openFrameworks, Arduino)</li>
+                <li>Python</li>
+                <li>GLSL</li>
+                <li>Turbo Pascal (1st)</li>
+            </ul>
         </div>
     </main>
 
