--- a/code/shaders/08/index.html
+++ b/code/shaders/08/index.html
@@ -18,7 +18,6 @@
     </div>
     <div id="container">
       <!-- SHADER GETS DRAWN HERE -->
-    </div>
       <script id="vertexShader" type="x-shader/x-vertex">
       void main() {
         gl_Position = vec4( position, 1.0 );
@@ -27,13 +26,51 @@
 
       <script id="fragmentShader" type="x-shader/x-fragment">
 
+      #ifdef GL_ES
+      precision mediump float;
+      #endif
 
-      </script>
-    </script>
+      #define PI 3.14159265359
+      #define TWO_PI 6.28318530718
+
+      uniform vec2 u_resolution;
+      uniform vec2 u_mouse;
+      uniform float u_time;
+
+      // Reference to
+      // http://thndl.com/square-shaped-shaders.html
+
+      void main(){
+        vec2 st = gl_FragCoord.xy/u_resolution.xy;
+        st.x *= u_resolution.x/u_resolution.y;
+        vec3 color = vec3(0.0);
+        float d = 0.0;
+
+        // Remap the space to -1. to 1.
+        st = st *2.-1.;
+
+        // Number of sides of your shape
+        int N = 5;
+
+        // Angle and radius from the current pixel
+        float a = atan(st.x,st.y)+PI;
+        float r = TWO_PI/float(N)*sin(u_time/10.);
+
+        // Shaping function that modulate the distance
+        d = cos(floor(0.9+a/r)*r-a)*length(st);
+
+        color = vec3(smoothstep(.4,cos(u_time/11.123),d), smoothstep(.4,cos(u_time/13.235),d), step(cos(u_time/8.57),d));
+        // color = vec3(d);
+
+        gl_FragColor = vec4(color,1.0);
+      }
+
+
+  </script>
 <script src="../setup.js" type="text/javascript"></script>
 <script type="text/javascript">
       // set project's number and name
-      projectSetup(8  ,"> title goes here <");
+      projectSetup(8  ,"MultiFlower");
 </script>
 </body>
 </html>
