--- a/index.html
+++ b/index.html
@@ -1,3 +1,24 @@
+<!--
+- HEY!! STOP!!
+
+- why are you lurking around here?
+
+- you know this is the under bridge euquivalent for a website, right?
+
+- only sketchy people hang around here.
+
+- just kidding, if you are looking for this site's source code, might as well look here:
+https://github.com/mbrav/mbrav.github.io
+
+CODE ATTRIBUTIONS & INFLUENCES:
+
+Bryan Ma
+http://www.bryan-ma.com/
+
+Malika Favre
+http://malikafavre.com/
+
+-->
 <!DOCTYPE html>
 <html>
 
@@ -21,32 +42,11 @@
     <link href='src/lib/normalize.css' rel='stylesheet' type='text/css'>
     <link href='src/style.css' rel='stylesheet' type='text/css'>
 
-    <link href="https://fonts.googleapis.com/css?family=Bitter|Source+Sans+Pro" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bitter|Inconsolata:400,700" rel="stylesheet">
 
 </head>
 
 <body>
-    <!--
-  - HEY!! STOP!!
-
-  - why are you lurking around here?
-
-  - you know this is the under bridge euquivalent for a website, right?
-
-  - only sketchy people hang around here.
-
-  - just kidding, if you are looking for this site's source code, might as well look here:
-  https://github.com/mbrav/mbrav.github.io
-
-  CODE ATTRIBUTIONS & INFLUENCES:
-
-  Bryan Ma
-  http://www.bryan-ma.com/
-
-  Malika Favre
-  http://malikafavre.com/
-
-  -->
     <!-- NAVIGATION BAR-->
     <nav>
         <div id="title">
@@ -86,9 +86,9 @@
         <div class="content">
             <p><img src="src/img/head.jpg" id="portrait" alt="" /> Hi, this is Michael 👋🏼</p>
 
-            <p>He identifies himself as an <em>aspiring generalist</em>, an <em>unreserved tinkerer</em>, and an <em>agitated theorizer</em>. At present, he is a student at Parsons School of Design studying BFA Design &amp; Technology and Philosophy as a secondary major. His investigations explore the peripheries where design and technology meet — a place where human artifice succumbs in the universalizing ideals of technocratic quantization and determination. The terms that might define Michael’s focus is <em>creative technology</em>, <em>new media art</em>, <em>interaction design</em>, and <em>interdisciplinary design</em>. </p>
+            <p>He identifies himself as an <em>aspiring generalist</em>, an <em>unreserved tinkerer</em>, and an <em>agitated theorizer</em>. At present, he is a student at Parsons School of Design studying BFA Design &amp; Technology and Philosophy as a secondary major. His investigations explore the peripheries where design and technology meet — a place where human artifice succumbs in the universalizing ideals of technocratic quantization and determination. Michael’s focuses can be defined as a <em>creative technologist</em>, <em>new media artist</em>, and <em>interaction designer</em>. </p>
 
-            <p>Michael’s experiences range from creative/experimental web projects (including this site), to new media art installations built using the Arduino and Raspberry Pi platforms. His other skills include creative coding using JavaScript, openFrameworks and Processing libraries, sound effect &amp; music production, 3d animation, photography and video editing.</p>
+            <p>Michael’s experiences range from creative/experimental web projects (including this site), to new media art installations built using the Arduino and Raspberry Pi platforms. His other skills include creative coding using JavaScript, WebGL, openFrameworks and Processing libraries, sound effect &amp; music production, 3d animation, photography and video editing.</p>
 
             <p>In parallel with studying Design &amp; Technology at Parsons, Michael is also pursuing a secondary major in Philosophy at Eugene Lang College. His interest in these studies is to examine technology as an existential extension of the modern human being. He seeks to investigate the human condition at a time of morphing environments, evolving technologies, and the incubation of eccentric new mediums. It is a path that Michael is striving to explore and combine with his primary major.</p>
 
@@ -123,7 +123,7 @@
     <!-- RESUME PAGE  -->
     <main id="resume">
         <div class="content">
-            <h1>Resumé</h1>
+            <h1><span> /</span>resumé</h1>
 
             <p><em><strong>Creative Technology, Physical Computing, Interdisciplinary Design, and Installation Art</strong></em></p>
 
