--- a/pages/bias.html
+++ b/pages/bias.html
@@ -1,15 +1,24 @@
-<h1>Extensions of Bias (WORK IN PROGRESS)</h1>
+<h1>Extensions of Bias</h1>
 
-<h3>New Media Art Installation</h3>
+<h3>Art Installation</h3>
 
 <h3>December 2016</h3>
 
-<iframe src="https://player.vimeo.com/video/194387391/?color=9CBEF2"  frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<iframe src="https://player.vimeo.com/video/195355551/?color=9CBEF2"  frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
-<p>At an age of digitally augmented media, <em>digtial bias</em> is transforming into something that is becoming inherited in the nature of <em>homo cyberneticus</em> -- a species conditioning itself to take control over almost any natural system by means of technology. Humanity's destiny is quite certain, technology is becoming less of a tool, and more of a prosthesis that is actively shaping the human condition.</p>
+<ul>
+<li>[Raspberry Pis]</li>
+<li>[Character LCDs]</li>
+<li>[Speakers]</li>
+<li>[Twitter API]</li>
+<li>[Network switch]</li>
+<li>[Ethernet]</li>
+</ul>
 
-<p>Human nature is imperfect, Technology is frequently viewed as a solution to the immense number of human cognitive biases. Technology brings a promise of establishing a more rational human nature, but in practice, it has also shown that it can be used as a rhetorical tool for manipulative persuasion, even in &quot;free&quot; societies. Human cognition has the potential to form an even more immensely biased human nature. </p>
+<p>At an age of digitally augmented media, digital bias is transforming into something inherent in the nature — a species conditioning itself to take control over almost any natural system by means of technology. Humanity's destiny is quite certain, technology is becoming less of a tool, and more of a prosthesis that is actively shaping the human. But what does using technology mean when we us its as a construction material of our natures? Does it make us more truthful and rational, or does it do the opposite? </p>
 
-<p>But sometimes, technology can escape before humans even learn how to tame it, or are able to realize its long-term consequences. Such an invention had almost turned out to be the atom bomb, which was miraculously tamed, before causing an even further proliferation and a final chapter of life as we <em>narrowly</em> know it. Such a chapter is chaotic from our perspective, but poetic to an extraterrestrial visitor, who would embark on our planet and remark: &quot;a species that let technology escape&quot;, take a few deep breaths, and continue onto his next journey around other planets -- similar to the way we continue on with our their daily lives after a visit to an archeological museum filled with fossilized dinosaurs.</p>
+<p>Along the biases that are already inherent in biologic human nature, technology seems to extend the list of these biases and prejudices even further. Human biases have become the inherent products of digital capitalism and consumer societies — products that are becoming increasingly inconspicuous to human awareness, as they hardwire the human consciousness. Human bias is a catalyst for the instrumentality of mass sensation, desire, marketing, and political sentiment. It is the equivalent of a nervous system that is being actively stimulated with electrodes, distracting the mind from thinking rationally.</p>
 
-<p>How do we manifest bias?</p>
+<p>Too little information is viewed as a deprivation from freedom of speech, but too much information, to an extent that it becomes imperceptible — is not viewed as deprivation from freedom of speech. But distraction is the key instrumentality of <em>bias</em> — it breeds control, subversion, and manipulation. Excessive abundance of information transforms rationality into an oblique signal, fainted by news about Taylor Swift’s sex life, the new iPhone, and a politician’s hair style. But the information that surfaces, is based on intent of either the global Silicone Valley, or insurgent algorithms. Freedom is not just a set of actions that an ideology permits an individual to make, but it must be first and foremost, be a state of an unbiased mind. Without rationale, freedom becomes an instrumental term of oppression. </p>
+
+<p>As humanity invents new emergent forms of media consumption, we also embrace the biases that are adherent to these mediums. Mass media feeds, corporate endorsement, rhetoric, and undigested radical ideologies — are served to the human consciousness through the arteries of digital technology. While humans condition themselves to trust and embrace these technologies, we are also conditioning an increasingly biased human nature.</p>
