new shaders + edits + removed old stuff

--- a/pages/bias.html
+++ b/pages/bias.html
@@ -6,6 +6,15 @@
 
 <iframe src="https://player.vimeo.com/video/195355551/?color=9CBEF2"  frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
+<ul>
+<li>[Raspberry Pis]</li>
+<li>[Character LCDs]</li>
+<li>[Speakers]</li>
+<li>[Twitter API]</li>
+<li>[Network switch]</li>
+<li>[Ethernet]</li>
+</ul>
+
 <p>The destiny of the romantic relationship between humans and technology is certain — technology is becoming less of a tool, and more of a prosthesis that is actively shaping the human condition and agency. But what does this marvelous and empowering technology bring? Along the biases that are already inherent in biologic human nature, how can technology augment our immensely biased natures? Are we using technology as an instrument that expands our rationality, or are we creating bubbles of opinions and prejudices that we endlessly affirm and entertain — chasms that become desolated from rationality. </p>
 
 <p>Human biases have become the inherent products of digital capitalism and consumer societies — products that are becoming increasingly inconspicuous to human awareness as they hardwire the human consciousness. Human bias is a catalyst for the instrumentality of mass sensation, desire, marketing, and political sentiment. It is the equivalent of a nervous system that is being actively stimulated with electrodes, distracting the mind from thinking sanely.</p>
