--- a/pages/9x6.html
+++ b/pages/9x6.html
@@ -6,6 +6,8 @@
 
 <iframe src="https://player.vimeo.com/video/139899105?color=9CBEF2"  frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
+<p><a href="https://soundcloud.com/mixania/9x6">9x6 on Soundcloud</a></p>
+
 <h2>Statement</h2>
 
 <p><em>9x6</em> is a project that came to life in a passive manner which led it to become personal and expressive. It embraces certain aspects of my biography that make simple questions like <em>”where&#8217;s home for you?”</em> to be tedious and difficult questions to answer. This clip was filmed in New York and Miami, FL. One was my birthplace, and the other is a place where I grew up partially during my early childhood. </p>
