--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@ http://malikafavre.com/
 
             <h2>Experience</h2>
 
-            <p><em>Communications Intern</em> at <a href="http://eyebeam.org/">Eyebeam</a><br/>
-            <b>October 2016 - Present</b>. Brooklyn, NY. </p>
-
             <p><em>Peer Mentor</em> at <a href="http://www.newschool.edu/parsons/">Parsons School of Design</a><br/>
             <b>March 2016 - Present</b>. New York, NY. </p>
+
+            <p><em>Communications Intern</em> at <a href="http://eyebeam.org/">Eyebeam</a><br/>
+            <b>October 2016 - December 2016</b>. Brooklyn, NY. </p>
 
             <h2>Exhibitions &amp; Public Works</h2>
 
