last commit to this site ;( it served me well

--- a/pages/bias.html
+++ b/pages/bias.html
@@ -13,7 +13,7 @@
 
 <p><em>A speculative new media art installation about how media technology is actively shaping our increasingly biased human natures.</em></p>
 
-<p>The installation consists of 4 Raspberry Pi's that connect to Twitter, scrape for tweets based on a specific keyword, and read it using text-to-speech. Each of the four nodes choose a random keyword from a set of categories every 2 minutes; <em>politics</em>, <em>science</em>, <em>ideology</em>, <em>technology</em>, <em>consumerism</em>, <em>memoirs</em>, and <em>celebreties</em>. The idea behind this process, is to exaggerate the <a href="https://en.wikipedia.org/wiki/Confirmation_bias">confirmation bias</a> that we enjoy exercissing as users of media technology. </p>
+<p>The installation consists of 4 Raspberry Pi's that connect to Twitter, scrape for tweets based on a specific keyword, and read it using text-to-speech. Each of the four nodes choose a random keyword from a set of categories every 2 minutes; <em>politics</em>, <em>science</em>, <em>ideology</em>, <em>technology</em>, <em>consumerism</em>, <em>memoirs</em>, and <em>celebreties</em>. The idea behind this process, is to exaggerate the <a href="https://en.wikipedia.org/wiki/Confirmation_bias">confirmation bias</a> that we enjoy exercising as users of media technology. </p>
 
 <h2>Narrative</h2>
 
